# sturdins

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
include/sturdins/: inertial-nav.hpp  ins.hpp  kinematic-nav.hpp  kns.hpp  least-squares.hpp  nav-clock.hpp  nav-imu.hpp  strapdown.hpp
src/: inertial-nav.cpp  ins.cpp  kinematic-nav.cpp  kns.cpp  least-squares.cpp  nav-clock.cpp  nav-imu.cpp  strapdown.cpp  sturdins-python.cpp
src/sturdins/: __init__.py  __init__.pyi
src/sturdins/_sturdins_core/: __init__.pyi  leastsquares.pyi  navsense.pyi
tests/: test_attitude_ls.cpp  test_common.hpp  test_sim_ins.cpp  test_sim_kns.cpp
